--- a/server/views/case-summary.njk
+++ b/server/views/case-summary.njk
@@ -45,7 +45,7 @@
         <div class="govuk-grid-column-two-thirds">
 
             <h2 class="govuk-heading-m">Appearance</h2>
-            <p class="govuk-body">Court {{ courtRoom }}, {{ data.session | lower }} session,
+            <p class="govuk-body">Court {{ courtRoom | courtRoomDisplay }}, {{ data.session | lower }} session,
                 {{ moment(data.sessionStartTime).format('dddd D MMMM') }}.</p>
 
             {% if data.source | length %}
