--- a/server/views/case-list.njk
+++ b/server/views/case-list.njk
@@ -33,7 +33,7 @@
         {% for offence in item.offences %}
             {{ offences.push(offence.offenceTitle | escape) }}
         {% endfor %}
-        {% elif item.offences | length %}
+    {% elif item.offences | length %}
         {{ offences.push('<ol class="govuk-list govuk-list--number govuk-!-margin-bottom-0">') }}
         {% for offence in item.offences %}
             {{ offences.push('<li>' + offence.offenceTitle | escape + '</li>') }}
@@ -42,14 +42,22 @@
     {% endif %}
 
     {% set listing = [] %}
+    {% set updatedListing = [] %}
     {% if item.source === "COMMON_PLATFORM" %}
-        {{ listing.push('<ol class="govuk-list govuk-!-margin-bottom-0">') }}
-        {% for listNOfromCP in item.offences %}
-            {{ listing.push('<li>' + listNOfromCP.listNo | ordinalNumber | escape + '</li>' ) }}
+        {% for cpListNo in item.offences %}
+            {{ updatedListing.push(cpListNo.listNo) }}
         {% endfor %}
+        {% if updatedListing | unique | length === 1 %}
+            {{ listing.push(updatedListing | first | ordinalNumber | escape) }}
+        {% else %}
+            {{ listing.push('<ol class="govuk-list govuk-!-margin-bottom-0">') }}
+            {% for number in updatedListing %}
+                {{ listing.push('<li>' + number | ordinalNumber | escape + '</li>' ) }}
+            {% endfor %}
+            {{ listing.push('</ol>') }}
+        {% endif %}
     {% else %}
         {{ listing.push(item.listNo) }}
-        {{ listing.push('</ol>') }}
     {% endif %}
 
     {% set defendantFullName = (item.name.forename1 + ' ' + item.name.surname) if (item.name.forename1 and item.name.surname) else item.defendantName %}
@@ -59,7 +67,7 @@
         { text: ('<a href="/' + params.courtCode + '/case/' + item.caseId + '/defendant/' + item.defendantId + '/summary" class="pac-defendant-link govuk-!-font-weight-bold govuk-link govuk-link--no-visited-state" aria-label="' + a11yTitle + '">' + defendantFullName | escape | apostropheInName | properCase | removeTitle + '</a>' + crnDisplay ) | safe },
         { text: ('<div>' + ('<span class="moj-badge moj-badge--red pac-badge">Possible NDelius Record</span>' | safe if notMatched ) + ('<span class="moj-badge moj-badge--black pac-badge">Psr</span>' | safe if item.awaitingPsr) + ('<span class="moj-badge moj-badge--black pac-badge">Breach</span>' | safe if item.breach) + ('<span class="moj-badge moj-badge--black pac-badge">Sso</span>' | safe if item.suspendedSentenceOrder) + '</div>'+ (item.probationStatus | string | capitalize if not notMatched) + ('<span data-cy="previously-known-termination-date" class="govuk-caption-m">Order ended ' + moment(item.previouslyKnownTerminationDate, 'YYYY-MM-DD').format("D MMMM YYYY") | escape + '</span>' if item.previouslyKnownTerminationDate)) | safe },
         { text: offences | join('') | safe },
-        { text: listing  | join('') | safe },
+        { text: listing | join('') | safe },
         { text: item.session | capitalize },
         { text: courtRoom, format: "numeric"}
     ] -%}
