👷 Update PACT file

--- a/server/views/case-summary.njk
+++ b/server/views/case-summary.njk
@@ -138,7 +138,7 @@
                             {% else %}
                                 {% if telephones.mobile %}{{ telephones.mobile + " (Mobile)" }}<br/>{% endif %}
                                 {% if telephones.home %}{{ telephones.home + " (Home)" }}<br/>{% endif %}
-                                {% if telephones.work %}{{ telephones.work + " (Work)" }}<br/>{% endif %}
+                                {% if telephones.work %}{{ telephones.work + " (Work)" }}{% endif %}
                             {% endif %}
                         </dd>
                     </div>
