PIC-2067:  🤡 Add URN number to the case summary and update cases mocks

--- a/server/views/case-summary.njk
+++ b/server/views/case-summary.njk
@@ -52,7 +52,7 @@
 
             {% if data.source | length %}
                 <p class="govuk-caption-m govuk-!-margin-top-3">Source:
-                    {{ data.source | replace("_", " ") | title }}{% if data.source | lower === "libra" %}, case number {{ data.caseNo }}{% endif %}
+                {{ data.source | replace("_", " ") | title }} {% if data.source | lower === "libra" %} <br/> Case number: {{ data.caseNo }} {% endif %} <br/> URN: {{ data.urn }}
                 </p>
             {% endif %}
 
