--- a/server/views/match-defendant.njk
+++ b/server/views/match-defendant.njk
@@ -3,7 +3,7 @@
 {% if session.matchType === 'bulk' %}
   {%- set backUrl = '/' + session.courtCode + '/match/' + session.matchType + '/' + session.matchDate -%}
 {% else %}
-  {%- set backUrl = '/' + params.courtCode + '/case/' + data.caseId + '/defendant/' + data.defendantId + '/summary' -%}
+  {%- set backUrl = '/' + params.courtCode + '/hearing/' + data.hearingId + '/defendant/' + data.defendantId + '/summary' -%}
 {% endif %}
 
 {% block backlink %}
