PIC-1441 display and highlight aliases from offender matches

--- a/server/views/match-defendant.njk
+++ b/server/views/match-defendant.njk
@@ -134,6 +134,29 @@
                             {{ matchName | apostropheInName | properCase | removeTitle | markMatches(defendantFullName) | safe }}
                           </td>
                         </tr>
+
+                        {% if  item.matchIdentifiers.aliases %}
+
+                          {% set aliases = item.matchIdentifiers.aliases %}
+                          {% set aliasesLength = aliases | length if aliases else 0 %}
+
+                          <tr class="govuk-table__row">
+
+                            <th scope="row" class="govuk-table__header pac-width-40">Alias{{ 'es' if aliasesLength > 1 }}</th>
+                            <td class="govuk-table__cell">
+                              {% set aliasDisplayLimit = 3 if aliasesLength > 2 else aliasesLength %}
+
+                              {% for i in range(0, aliasDisplayLimit) -%}
+                                {% set alias = aliases[i] %}
+                                {% set aliasName = alias.firstName + ' ' + (alias.middleNames | join(' ') + ' ' if alias.middleNames) + alias.surname %}
+                                {{ aliasName | apostropheInName | properCase | removeTitle | markMatches(defendantFullName) | safe }}{{ ',' if not loop.last }}
+                              {%- endfor %}
+
+                              {{ ['+ ', aliasesLength - 3, ' other name' + ('s' if aliasesLength> 4 else ''), ' matched' ] | join('') if aliasesLength > 3  }}
+
+                            </td>
+                          </tr>
+                        {% endif %}
                         <tr class="govuk-table__row">
                           <th scope="row" class="govuk-table__header">Date of birth</th>
                           <td class="govuk-table__cell">
