--- a/server/views/match-defendant.njk
+++ b/server/views/match-defendant.njk
@@ -134,14 +134,13 @@
                             {{ matchName | apostropheInName | properCase | removeTitle | markMatches(defendantFullName) | safe }}
                           </td>
                         </tr>
+                        {% set aliases = item.matchIdentifiers.aliases %}
 
-                        {% if  item.matchIdentifiers.aliases %}
+                        {% if aliases %}
 
-                          {% set aliases = item.matchIdentifiers.aliases %}
                           {% set aliasesLength = aliases | length if aliases else 0 %}
 
                           <tr class="govuk-table__row">
-
                             <th scope="row" class="govuk-table__header pac-width-40">Alias{{ 'es' if aliasesLength > 1 }}</th>
                             <td class="govuk-table__cell">
                               {% set aliasDisplayLimit = 3 if aliasesLength > 2 else aliasesLength %}
@@ -153,7 +152,6 @@
                               {%- endfor %}
 
                               {{ ['+ ', aliasesLength - 3, ' other name' + ('s' if aliasesLength> 4 else ''), ' matched' ] | join('') if aliasesLength > 3  }}
-
                             </td>
                           </tr>
                         {% endif %}
