Court room numbers are appearing twice in the pick list fields

--- a/server/views/case-list.njk
+++ b/server/views/case-list.njk
@@ -26,7 +26,6 @@
 {% for item in data %}
 
     {% set offences = [] %}
-    {% set courtRoom = item.courtRoom | courtRoomDisplay %}
 
     {% set notMatched = item.probationStatus | string | lower == "possible ndelius record" %}
     {% if item.offences | length === 1 %}
@@ -69,7 +68,7 @@
         { text: offences | join('') | safe },
         { text: listing | join('') | safe },
         { text: item.session | capitalize },
-        { text: courtRoom, format: "numeric"}
+        { text: item.courtRoom, format: "numeric"}
     ] -%}
     {%- if params.subsection === 'removed' %}
         {{ tableRow.push({ text: item.caseNo, format: "numeric" }) }}
