PIC-2178 fix int test and lint issues

--- a/server/views/match-defendant.njk
+++ b/server/views/match-defendant.njk
@@ -143,14 +143,8 @@
                             <th scope="row" class="govuk-table__header pac-width-40">Alias{{ 'es' if aliasesLength > 1 }}</th>
                             <td class="govuk-table__cell">
                               {% set aliasDisplayLimit = 3 if aliasesLength > 2 else aliasesLength %}
-
-                              {% for i in range(0, aliasDisplayLimit) -%}
-                                {% set aliasName = aliases[i].firstName + ' ' + (aliases[i].middleNames | join(' ') + ' ' if aliases[i].middleNames) + aliases[i].surname %}
-                                {% set markedAlias =  (aliasName | apostropheInName | properCase | removeTitle | markMatches(defendantFullName) | safe | emptyIfUnmarked )%}
-                                {{ ', ' if (not loop.first and markedAlias) }} {{ markedAlias }}
-                              {%- endfor %}
-
-                              {{ ['+ ', aliasesLength - 3, ' other name', ('s' if aliasesLength > 4), ' matched' ] | join('') if aliasesLength > 3  }}
+                              {% for i in range(0, aliasDisplayLimit) %}{% set aliasName = aliases[i].firstName + ' ' + (aliases[i].middleNames | join(' ') + ' ' if aliases[i].middleNames) + aliases[i].surname %}{% set markedAlias =aliasName | apostropheInName | properCase | removeTitle | markMatches(defendantFullName) | safe | emptyIfUnmarked %}{{ ', ' if (not loop.first and markedAlias)}} {{ markedAlias }} {%- endfor -%}
+                              {{ [' + ', aliasesLength - 3, ' other name', ('s' if aliasesLength > 4), ' matched' ] | join('') if aliasesLength > 3  }}
                             </td>
                           </tr>
                         {% endif %}
