PIC-2144: Accessibility: Multiple level 1 headings (pages with Key details bar)

--- a/public/stylesheets/app/_key-details.scss
+++ b/public/stylesheets/app/_key-details.scss
@@ -1,7 +1,7 @@
 .pac-key-details-bar {
   background-color: $govuk-brand-colour;
 
-  h1, .govuk-body {
+  h1, h2, .govuk-body {
     color: govuk-colour("white");
   }
 
