PIC-2158: ♿️ Add aria-label to case list <h1>

--- a/server/views/case-list.njk
+++ b/server/views/case-list.njk
@@ -175,7 +175,7 @@
         }) }}
     {% endif %}
 
-    <h1 class="qa-case-list-day govuk-heading-xl govuk-!-margin-bottom-6">
+    <h1 class="qa-case-list-day govuk-heading-xl govuk-!-margin-bottom-6" aria-label="Case list for {{ currentDate.format(dateFormat) }}">
         {% if params.date === today %}
             {{ currentDate.format(dateFormat) }} <span class="pac-secondary-text">(Today)</span>
         {% elseif params.date === tomorrow and not isSunday %}
